--- a/facilities.html
+++ b/facilities.html
@@ -139,12 +139,11 @@
         <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
   
-      <!-- Toggle Button -->
-      <button id="menu-toggle" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg lg:hidden">
+      <!-- Toggle Button (Mobile) -->
+      <button id="menu-toggle" type="button" 
+              class="inline-flex items-center p-2 text-xl text-green-700 hover:text-black transition justify-center rounded-lg lg:hidden">
         <span class="sr-only">Open main menu</span>
-        <svg id="menu-icon" class="w-6 h-6 text-green hover:text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
-        </svg>
+        <i class="fa-solid fa-bars"></i>
       </button>
   
       <!-- Navbar Menu -->
@@ -155,9 +154,13 @@
           <li><a href="/facilities" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
-          <li class="flex flex-wrap gap-4">
-            <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
-            <a href="/contact-us" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
+          <li class="flex flex-col md:flex-row gap-4">
+            <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full md:w-1/2 lg:w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
+                Lab Results
+            </a>
+            <a href="/contact-us" class="block w-full md:w-1/2 lg:hidden text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
+                Contact Us
+            </a>
           </li>
         </ul>
       </div>
@@ -328,14 +331,7 @@
 
 <script src="js/floor_plan.js"></script>
 <script src="js/go-top-button.js"></script>
-<script>
-  const toggleBtn = document.getElementById('menu-toggle');
-  const menu = document.getElementById('navbar-menu');
-
-  toggleBtn.addEventListener('click', () => {
-    menu.classList.toggle('hidden');
-  });
-</script>
+<script src="js/script.js"></script>
 
 <!-- AOS Script -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
