added news page for testing

--- a/admin/index.html
+++ b/admin/index.html
@@ -9,8 +9,8 @@
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Tiptap Rich Text Editor -->
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@tiptap/core@2.1.12/dist/tiptap-core.esm.js"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@tiptap/starter-kit@2.1.12/dist/tiptap-starter-kit.esm.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@tiptap/core@2.1.12/dist/index.esm.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@tiptap/starter-kit@2.1.12/dist/index.esm.js"></script>
     <style>
         .ProseMirror {
             border: 1px solid #d1d5db;
