added article page

--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News & Updates - Metro Vigan Hospital</title>
+    <title>News & Updates | Metro Vigan Hospital</title>
     <meta name="author" content="Metro Vigan Hospital">
     <meta name="description" content="Stay updated with the latest news, events, and health advisories from Metro Vigan Hospital.">
     <meta name="keywords" content="Metro Vigan Hospital news, hospital updates, health news Philippines, Vigan hospital events">
