--- a/news.html
+++ b/news.html
@@ -270,7 +270,7 @@
                         <p class="text-sm text-gray-500 mb-2">${article.author} &bull; ${articleDate}</p>
                         <h2 class="text-3xl font-bold text-gray-800 mb-4">${article.title}</h2>
                         <p class="text-gray-600 text-sm mb-6">${truncate(article.content, 200)}</p>
-                        <a href="article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="/news/article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             `;
@@ -285,7 +285,7 @@
                         <p class="text-gray-600 text-sm mb-4">
                             ${truncate(article.content, 200)}
                         </p>
-                        <a href="article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="/news/article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
             `;
