--- a/index.html
+++ b/index.html
@@ -778,129 +778,30 @@
     </div>
   </section>
 
-  <!-- NEWS & UPDATES -->
+  <!-- News Preview Section -->
   <section id="news" class="py-16 bg-gray-50">
-    <div class="max-w-7xl mx-auto px-4">
-      <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
         <span class="text-green-800">News</span> & <span class="text-green-800">Events</span>
       </h2>
       <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">Stay informed with the latest news, announcements, and updates from our hospital.  
         From new medical services and health tips to upcoming events, we keep you connected to what's happening in our community.
       </p>
-
-      <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-8">
         
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
-          <img src="img/news/2025/wso-angels/WSO_Social Media Template-Diamond.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">WSO Grants Diamond Status to Metro Vigan Hospital</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              Metro Vigan Hospital is honored to receive the prestigious Diamond Status Award from the World Stroke Organization, recognizing our commitment to excellence in stroke patient care.
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
+        <div id="news-preview-grid" class="grid sm:grid-cols-2 md:grid-cols-3 gap-8">
+            <div class="text-center text-gray-500 py-12 col-span-3">
+                <i class="fas fa-spinner fa-spin text-3xl"></i>
+                <p>Loading news...</p>
+            </div>
         </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
-          <img src="img/news/2025/zumba/z-4.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">In My Zumba Era—MVH celebrates 25 years with movement and joy</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              Metro Vigan Hospital Celebrates 25 Years with Rhythm, Movement, and Community Spirit!
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
+        
+        <div class="text-center mt-12">
+            <a href="/news" class="bg-green-600 text-white font-bold py-3 px-8 rounded-lg hover:bg-green-700 transition duration-300">
+                View All News
+            </a>
         </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
-          <img src="img/news/2025/stac_vigan/k-7.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">MVH Begins Silver Anniversary with Love and Laughter at STAC-VIGAN</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              Metro Vigan Hospital turns 25 — and we’re celebrating by giving back. Honored to spend a joyful day with the inspiring kids of STAC-VIGAN!
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-          <img src="img/news/2025/balay_taripato/bt-4.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">Metro Vigan Hospital Conducts Community Gift-Giving Program</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              In celebration of its 25th anniversary, Metro Vigan Hospital visited Balay Taripato in Magsingal, Ilocos Sur, for a meaningful gift-giving program, sharing joy and compassion for the elderly.
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-          <img src="img/news/2025/blood-donor-day/b-5.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">MVH and Philippine Red Cross: Ilocos Sur Chapter Joined together on World Blood Donor Day</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              In celebration of World Blood Donor Day, Metro Vigan Hospital champions the spirit of giving by hosting a blood donation drive—because every drop counts, and every donor gives hope.
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-          <img src="img/news/2025/tree-planting/t-1.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">MVH Celebrates 25 Years by Greening Caniaw Forest Park with Tree Planting Initiative</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              Rooted in Service: Metro Vigan Hospital Honors 25 Years with Tree Planting in Paing, Bantay, Ilocos Sur.
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-          <img src="img/news/2025/sportsfest/s-4.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">MVH Celebrates Silver Milestone Through Friendly Competition and Team Spirit</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              From hospital halls to playing fields—MVH celebrates 25 years with teamwork, energy, and fun!
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
-          <img src="img/news/2025/safe-hospital-award/a-3.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">Metro Vigan Hospital has been awarded "Level 2—Grand Prize" for Safe Hospital Awards</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              Metro Vigan Hospital received its Safe Hospital Plaque of Excellence from Private Hospital Association of the Philippines (PHAPI) for Safe Hospital Awards Level 2—Grand Prize.
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-        <!-- News Card -->
-        <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-          <img src="img/news/2025/operation_tuli/t-1.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
-          <div class="p-6">
-            <h3 class="text-lg font-semibold mb-2">Metro Vigan Hospital Holds Free Operation Tuli in Celebration of 25th Anniversary</h3>
-            <p class="text-gray-600 text-sm mb-4">
-              In line with its 25th anniversary, Metro Vigan Hospital held a free Operation Tuli, ensuring quality healthcare and surgical services for the children of the community.
-            </p>
-            <a href="#" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
-          </div>
-        </div>
-
-      </div>
     </div>
-  </section>
+</section>
 
   <!-- WE ARE HIRING -->
   <section id="careers" class="py-16 bg-white">
@@ -1289,7 +1190,7 @@
     </div>
   </footer>
 
-
+<script type="module" src="js/news-preview.js"></script>
 <script src="js/script.js"> </script>
 <script src="js/go-top-button.js"></script>
 
