added ISO Certifications in Navbar and added menu

--- a/contact-us.html
+++ b/contact-us.html
@@ -93,8 +93,11 @@
       <!-- Logo -->
       <a href="/" class="flex items-center justify-center">
         <img src="img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
-        <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
-        <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
+        <div class="flex flex-col align-items-start justify-start">
+          <span class="text-2xl font-semibold uppercase whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
+          <span class="text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
+          <span class="md:text-md lg:text-lg text-sm font-semibold whitespace-nowrap inline">ISO 9001:2015 CERTIFIED</span>
+        </div>
       </a>
 
       <!-- Toggle Button (Mobile) -->
@@ -111,6 +114,8 @@
           <li><a href="/services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
+          <li><a href="/news" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">News</a></li>
+          <li><a href="/careers" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Careers</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li class="flex flex-col md:flex-row gap-4">
             <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full md:w-1/2 lg:w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
@@ -438,6 +443,7 @@
           <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
           <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="/news" class="hover:text-[#04813b] transition">News</a></li>
           <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
           <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>
