--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <!-- AOS Animation Library -->
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS (if any) -->
@@ -27,8 +27,11 @@
       <!-- Logo -->
       <a href="/" class="flex items-center justify-center">
         <img src="img/logo/mvh_logo_optimized.avif" class="h-16 mr-3" alt="MVH Logo" fetchpriority="high" loading="eager"/>
-        <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
-        <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
+        <div class="flex flex-col align-items-start justify-start">
+          <span class="text-2xl font-semibold uppercase whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
+          <span class="text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
+          <span class="md:text-md lg:text-lg text-sm font-semibold whitespace-nowrap inline">ISO 9001:2015 CERTIFIED</span>
+        </div>
       </a>
   
       <!-- Toggle Button (Mobile) -->
@@ -45,6 +48,8 @@
           <li><a href="/services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Services</a></li>
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
+          <li><a href="/news" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b] decoration-[#04813b] underline underline-offset-[0.425rem]">News</a></li>
+          <li><a href="/careers" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Careers</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li class="flex flex-col md:flex-row gap-4">
             <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full md:w-1/2 lg:w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
@@ -110,6 +115,7 @@
           <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
           <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="/news" class="hover:text-[#04813b] transition">News</a></li>
           <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
           <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
           <li><a href="/contact-us" class="hover:text-[#04813b] transition">Contact Us</a></li>
@@ -308,7 +314,7 @@ window.addEventListener('scroll', () => {
                       <p class="text-sm text-gray-500 mb-2">${article.author} &bull; ${articleDate}</p>
                       <h2 class="text-3xl font-bold text-gray-800 mb-4">${article.title}</h2>
                       <p class="text-gray-600 text-sm mb-6">${truncate(article.content, 200)}</p>
-                      <a href="article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                      <a href="/news/article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
                   </div>
               </div>
           `;
