fix news articles link

--- a/news.html
+++ b/news.html
@@ -330,7 +330,7 @@ window.addEventListener('scroll', () => {
                       <p class="text-gray-600 text-sm mb-4">
                           ${truncate(article.content, 150)}
                       </p>
-                      <a href="article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
+                      <a href="/news/article.html?id=${article.id}" class="text-green-600 font-medium hover:underline">Read more <i class="fa-solid fa-arrow-right"></i></a>
                   </div>
               </div>
           `;
