exchanged lab result and contact us hidden behavior

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -79,10 +79,10 @@
           <li><a href="/careers" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Careers</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li class="flex flex-col md:flex-row gap-4">
-            <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full md:w-1/2 lg:w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
+            <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full md:w-1/2 lg:hidden text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
                 Lab Results
             </a>
-            <a href="/contact-us" class="block w-full md:w-1/2 lg:hidden text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
+            <a href="/contact-us" class="block w-full md:w-1/2 lg:w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">
                 Contact Us
             </a>
           </li>
