update privacy policy notice

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -231,7 +231,7 @@
     </div>
 
     <!-- Title -->
-    <h1 class="text-2xl font-bold text-center uppercase mt-6 mb-6">Privacy Notice</h1>
+    <h1 class="text-2xl lg:text-2xl md:text-xl sm:text-lg text-green-800 font-bold text-center uppercase mt-6 mb-6">Privacy Policy Notice</h1>
 
     <!-- Paragraphs -->
     <p class="text-justify text-[16px] leading-relaxed mb-4">
@@ -245,8 +245,13 @@
     </p>
     <p class="text-justify text-[16px] leading-relaxed mb-4">
       The Hospital complies with the Data Privacy Act and adheres to data privacy principles. We uphold your rights as data subjects and we have implemented security measures to safeguard your information. Should you require more information, we shall be happy to assist you. If you believe your privacy rights have been violated, you may raise your concerns with our Data Protection Officer, (Orlino V. Abalos, via email at 
-      <span class="font-semibold">bounce_capt@yahoo.com</span> or contact <span class="font-semibold">09275090414</span>. You may also file a complaint with the National Privacy Commission if we are unable to address your concerns via email at 
-      <span class="font-semibold">info@privacy.gov.ph</span>.
+      <a href="mailto:dataprivacy@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+        <span class="font-semibold text-green-800 ">dataprivacy@metroviganhospital.com</span>
+      </a>
+       or contact <span class="text-green-800 font-semibold">09275090414</span>. You may also file a complaint with the National Privacy Commission if we are unable to address your concerns via email at 
+      <a href="mailto:info@privacy.gov.ph?" target="_blank" class="hover:underline hover:underline-offset-2">
+        <span class="font-semibold text-green-800">info@privacy.gov.ph</span>
+      </a>.
     </p>
     <p class="text-justify text-[16px] leading-relaxed mb-6">
       In case you have questions about our privacy practices or the purposes of our processing, or if you have any concern about how we protect your personal data, you may contact:
@@ -254,12 +259,41 @@
 
     <!-- Contacts -->
     <div class="space-y-2 text-[16px] leading-relaxed">
-      <p><strong>Digna R. Ragasa, MD, MHA, FPCHA (Medical Director)</strong> – Email: drragasa614@yahoo.com</p>
-      <p><strong>Orlino V. Abalos (DPO)</strong> – Email: bounce_capt@yahoo.com</p>
-      <p><strong>John Leo Ruelos (Administrative Officer)</strong> – Email: cpa.johnleoruelos@yahoo.com</p>
-      <p><strong>Imelda F. Calpito (Medical Records Officer)</strong> – Email: imeldz19@yahoo.com</p>
-      <p><strong>Ma. Barbara Riotoc (HRDO)</strong> – Email: mabarbarariotoc@yahoo.com</p>
-      <p><strong>Josefina Agam (Chief Nurse)</strong> – Email: josefina.agam@yahoo.com</p>
+      <p><strong>Digna R. Ragasa, MD, MHA, FPCHA (CEO)</strong> – Email: 
+        <a href="mailto:info@privacy.gov.ph?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">president_ceo@metroviganhospital.com</span>
+        </a>
+      </p>
+      <p><strong>Orlino V. Abalos (DPO)</strong> – Email: 
+        <a href="mailto:dataprivacy@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">dataprivacy@metroviganhospital.com</span>
+        </a>
+      </p>
+      <p><strong>John Leo Ruelos (CFO)</strong> – Email: 
+        <a href="mailto:chieffinanceofficer@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">chieffinanceofficer@metroviganhospital.com</span>
+        </a>
+      </p>
+      <p><strong>Dexter Patron (COO)</strong> – Email: 
+        <a href="mailto:chiefoperatingofficer@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">chiefoperatingofficer@metroviganhospital.com</span>
+        </a>
+      </p>
+      <p><strong>Imelda F. Calpito (Medical Records Officer)</strong> – Email: 
+        <a href="mailto:records@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">records@metroviganhospital.com</span>
+        </a>
+      </p>
+      <p><strong>Jaypee Caalim (HRDO)</strong> – Email: 
+        <a href="mailto:humanresource@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">humanresource@metroviganhospital.com</span>
+        </a>
+      </p>
+      <p><strong>Josefina Agam (Chief Nurse)</strong> – Email: 
+        <a href="mailto:chiefnursingofficer@metroviganhospital.com?" target="_blank" class="hover:underline hover:underline-offset-2">
+          <span class="font-semibold text-green-800">chiefnursingofficer@metroviganhospital.com</span>
+        </a>
+      </p>
     </div>
 
     <!-- Footer -->
