added booking modal for mammography

--- a/index.html
+++ b/index.html
@@ -1205,6 +1205,7 @@
 <script type="module" src="js/news-preview.js"></script>
 <script src="js/script.js"> </script>
 <script src="js/go-top-button.js"></script>
+<script src="js/contact-us.js"></script>
 
 <!-- AOS Script -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
