--- a/contact-us.html
+++ b/contact-us.html
@@ -35,6 +35,7 @@
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 
+  <script src="https://www.google.com/recaptcha/api.js?render=6LdVjZ8rAAAAAMTpN-pXZT9SoR2JHcmCUFNDwv2W"></script>
   <!-- Schema.org Markup -->
   <script type="application/ld+json">
   {
@@ -513,7 +514,8 @@
       </div>
     </div>
   </footer>
-  
+
+<script src="js/contact-us.js"></script>
 <script src="js/script.js"> </script>
 <script src="js/go-top-button.js"></script>
 
