added booking modal for mammography

--- a/services.html
+++ b/services.html
@@ -230,7 +230,7 @@
 
             <!-- Scrollable Modal Body with Form -->
             <div class="overflow-y-auto p-8">
-                <form id="booking-form" action="https://formspree.io/f/xkgzljjj" method="POST">
+                <form id="booking-form">
                     <input type="hidden" name="_subject" value="New Appointment Booking Request!">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="relative md:col-span-2">
