--- a/news.html
+++ b/news.html
@@ -30,7 +30,7 @@
         <div class="flex flex-col align-items-start justify-start">
           <span class="text-2xl font-semibold uppercase whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
           <span class="text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
-          <span class="md:text-md lg:text-lg text-sm font-semibold whitespace-nowrap inline">ISO 9001:2015 CERTIFIED</span>
+          <span class="md:text-md lg:text-lg sm:text-sm text-[0.5rem] font-semibold whitespace-nowrap inline">ISO 9001:2015 CERTIFIED</span>
         </div>
       </a>
   
