change iso fontsize in navbar

--- a/index.html
+++ b/index.html
@@ -823,25 +823,11 @@
         
         <!-- Job Card -->
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
+          <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
+          <p class="text-gray-600 mt-2 text-sm">Department: Radiology</p>
           <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
-            Join our lab! We're hiring a Registered Medical Technologist. #RMT #MedTechHiring
-          </p>
-          <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
-            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
-            Apply Now
-          </a>
-        </div>
-
-        <!-- Another Job -->
-        <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Administrative Assistant</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Admin</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
-          <p class="mt-4 text-gray-700 text-sm">
-            We're hiring an Admin Assistant in Metro Vigan Hospital! Apply now! #JobsPH #Vigan
+            Operates imaging equipment to capture diagnostic images for medical evaluation.
           </p>
           <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
             class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
@@ -855,13 +841,29 @@
           <p class="text-gray-600 mt-2 text-sm">Department: Pharmacy</p>
           <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
-            Hiring: Registered Pharmacist. Join our MVH pharmacy team. Apply now! #RPh #Hiring #ViganCity
+            Hiring: Registered Pharmacist. Join our MVH pharmacy team. Apply now! #RPh #Hiring
           </p>
           <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
             class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
             Apply Now
           </a>
         </div>
+
+        <!-- Another Job -->
+        <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+          <h3 class="text-xl font-semibold text-green-700">Hospital Driver</h3>
+          <p class="text-gray-600 mt-2 text-sm">Department: Admin</p>
+          <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+          <p class="mt-4 text-gray-700 text-sm">
+            Responsible for transporting patients, staff, and medical supplies safely and efficiently.
+          </p>
+          <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+            Apply Now
+          </a>
+        </div>
+
+        
       </div>
 
       <!-- More Jobs Button -->
