update back to top color

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     <!-- Right Image (40%) -->
     <div class="relative w-full lg:w-2/5 bg-[#16a94c] flex items-end justify-center" data-aos="fade-left">
-      <img src="img/hero/hero.jpg" alt="Metro Vigan Hospital Building" fetchpriority="high" loading="eager" class="w-full h-full object-cover z-50">
+      <img src="img/hero/mvh.avif" alt="Metro Vigan Hospital Building" fetchpriority="high" loading="eager" class="w-full h-full object-cover z-50">
 
       <!-- Top Right Dotted Pattern -->
       <div class="hidden lg:inline xl:absolute top-4 right-0 z-50">
