update homepage hero image

--- a/index.html
+++ b/index.html
@@ -1123,6 +1123,10 @@
         <p class="text-gray-600 text-sm leading-relaxed">
           We Care, We Cure, We Can.
         </p>
+
+        <!-- <div>
+          <img src="img/certifications/iso.avif" fetchpriority="low" loading="lazy" alt="ISO Certified" class="h-10 w-auto mt-4">
+        </div> -->
       </div>
 
       <!-- Quick Links -->
