update job posting

--- a/careers.html
+++ b/careers.html
@@ -270,7 +270,7 @@
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Radiology</p>
-        <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
           Operates imaging equipment to capture diagnostic images for medical evaluation.
         </p>
@@ -280,11 +280,11 @@
         </a>
       </div>
 
-      <!-- Job Card
+      <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-green-700">Nursing Aide</h3>
+        <h3 class="text-xl font-semibold text-green-700">Staff Nurse</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Nursing Service</p>
-        <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
           Provide patient-centered care and assist doctors in treatment and procedures.
         </p>
@@ -292,7 +292,7 @@
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
-      </div> -->
+      </div>
 
       <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
@@ -301,6 +301,20 @@
         <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
           Dispense medications, counsel patients, and manage pharmacy operations.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Perform laboratory tests in areas such as Hematology, Clinical Chemistry, Microbiology, and Serology.
         </p>
         <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
@@ -350,7 +364,7 @@
         </a>
       </div> -->
       
-      <!-- Job Card -->
+      <!-- Job Card 
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Hospital Driver</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: General Services</p>
@@ -362,9 +376,9 @@
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
-      </div>
+      </div> -->
 
-      <!-- Job Card -->
+      <!-- Job Card 
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Utility Worker</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: General Services</p>
@@ -376,7 +390,7 @@
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
-      </div>
+      </div>-->
       
 
     </div>
