--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
           <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
           <p class="text-gray-600 mt-2 text-sm">Department: Radiology</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
+          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
             Operates imaging equipment to capture diagnostic images for medical evaluation.
           </p>
@@ -851,11 +851,11 @@
 
         <!-- Another Job -->
         <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-          <h3 class="text-xl font-semibold text-green-700">Hospital Driver</h3>
-          <p class="text-gray-600 mt-2 text-sm">Department: Admin</p>
-          <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+          <h3 class="text-xl font-semibold text-green-700">Staff Nurse</h3>
+          <p class="text-gray-600 mt-2 text-sm">Department: Nursing Department</p>
+          <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
           <p class="mt-4 text-gray-700 text-sm">
-            Responsible for transporting patients, staff, and medical supplies safely and efficiently.
+            Provide high-quality patient care in a dynamic hospital environment. Join our team!
           </p>
           <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
             class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
